Inicio da analise dos dados

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8fcdba4b",
    "metadata": {},
    "outputs": [
@@ -257,14 +257,321 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 881666 entries, 0 to 881665\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                  Non-Null Count   Dtype  \n",
+      "---  ------                  --------------   -----  \n",
+      " 0   CustomerID              881664 non-null  float64\n",
+      " 1   idade                   881664 non-null  float64\n",
+      " 2   sexo                    881664 non-null  object \n",
+      " 3   tempo_como_cliente      881663 non-null  float64\n",
+      " 4   frequencia_uso          881663 non-null  float64\n",
+      " 5   ligacoes_callcenter     881664 non-null  float64\n",
+      " 6   dias_atraso             881664 non-null  float64\n",
+      " 7   assinatura              881661 non-null  object \n",
+      " 8   duracao_contrato        881663 non-null  object \n",
+      " 9   total_gasto             881664 non-null  float64\n",
+      " 10  meses_ultima_interacao  881664 non-null  float64\n",
+      " 11  cancelou                881664 non-null  float64\n",
+      "dtypes: float64(9), object(3)\n",
+      "memory usage: 80.7+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "#Vizualização da base\n",
     "import pandas as pd\n",
+    "from IPython.display import display\n",
     "\n",
     "df = pd.read_csv(\"cancelamentos.csv\")\n",
-    "display(df)"
+    "display(df)\n",
+    "display(df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c1f54bbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Excluindo dados irrelevantes (Tratamento de dados)\n",
+    "df = df.drop(\"CustomerID\", axis=1)\n",
+    "df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7fc09c42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Contagem</th>\n",
+       "      <th>Porcentagem</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cancelou</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>499993</td>\n",
+       "      <td>56.71%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.0</th>\n",
+       "      <td>381666</td>\n",
+       "      <td>43.29%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Contagem Porcentagem\n",
+       "cancelou                      \n",
+       "1.0         499993      56.71%\n",
+       "0.0         381666      43.29%"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Contagem</th>\n",
+       "      <th>Porcentagem</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>duracao_contrato</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Annual</th>\n",
+       "      <td>354395</td>\n",
+       "      <td>40.20%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quarterly</th>\n",
+       "      <td>353059</td>\n",
+       "      <td>40.04%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monthly</th>\n",
+       "      <td>174205</td>\n",
+       "      <td>19.76%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Contagem Porcentagem\n",
+       "duracao_contrato                      \n",
+       "Annual              354395      40.20%\n",
+       "Quarterly           353059      40.04%\n",
+       "Monthly             174205      19.76%"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Contagem</th>\n",
+       "      <th>Porcentagem</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>assinatura</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Standard</th>\n",
+       "      <td>298254</td>\n",
+       "      <td>33.83%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Premium</th>\n",
+       "      <td>297353</td>\n",
+       "      <td>33.73%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Basic</th>\n",
+       "      <td>286052</td>\n",
+       "      <td>32.44%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Contagem Porcentagem\n",
+       "assinatura                      \n",
+       "Standard      298254      33.83%\n",
+       "Premium       297353      33.73%\n",
+       "Basic         286052      32.44%"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Contagem</th>\n",
+       "      <th>Porcentagem</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sexo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>500501</td>\n",
+       "      <td>56.77%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>381158</td>\n",
+       "      <td>43.23%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Contagem Porcentagem\n",
+       "sexo                        \n",
+       "Male      500501      56.77%\n",
+       "Female    381158      43.23%"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Analise inicial dos dados\n",
+    "def contagem_e_porcentagem(df, coluna):\n",
+    "    contagem = df[coluna].value_counts().to_frame(name='Contagem')\n",
+    "    porcentagem = df[coluna].value_counts(normalize=True)\\\n",
+    "                     .apply(lambda x: f'{x*100:.2f}%')\\\n",
+    "                     .to_frame(name='Porcentagem')\n",
+    "    \n",
+    "    resultado = contagem.join(porcentagem)\n",
+    "    display(resultado)\n",
+    "\n",
+    "\n",
+    "\n",
+    "contagem_e_porcentagem(df,\"cancelou\")\n",
+    "contagem_e_porcentagem(df, \"duracao_contrato\")\n",
+    "contagem_e_porcentagem(df, \"assinatura\")\n",
+    "contagem_e_porcentagem(df, \"sexo\")\n",
+    "\n"
    ]
   }
  ],
